<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edittextleft"
        android:layout_marginRight="@dimen/edittextright"
        android:layout_marginTop="@dimen/edittexttop"
        android:hint="@string/username"
        />
    
     <EditText 
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edittextleft"
        android:layout_marginRight="@dimen/edittextright"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

     <Button
         android:id="@+id/confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/confirm" />

</LinearLayout>
